# android_device_FIH_sdm660-common

./: Android.bp  Android.mk  BoardConfigCommon.mk  README.md  common.mk  config.fs  extract-files.sh  lineage.dependencies  manifest.xml  proprietary-files.txt  setup-makefiles.sh  vendor_prop.mk
DisplayCutoutEmulationHH6Overlay/: Android.mk  AndroidManifest.xml
DisplayCutoutEmulationSAT2Overlay/: Android.mk  AndroidManifest.xml
DisplayCutoutEmulationSATOverlay/: Android.mk  AndroidManifest.xml
SnapdragonCamera/: Android.mk
configs/: compatibility_matrix.xml  manifest.xml  manifest.xml1  org.codeaurora.snapcam.xml  privapp-permissions-wfd.xml  qti_whitelist.xml  telephony_product_privapp-permissions-qti.xml  thermal_info_config.json  vendor_framework_compatibility_matrix.xml
configs/manifests/: compatibility_matrix.xml  framework_manifest.xml  lineage_manifest.xml  (+2 more)
doze/: Android.mk
gpt-utils/: Android.bp
init/: Android.bp  init_FIH.cpp  init_sdm660.cpp
interfaces/: Android.bp
libhidl/: Android.mk
libshims/: Android.bp  camera_sdm660_shim.cpp
light/: android.hardware.light@2.0-service.sdm660.rc
livedisplay/: Android.bp  vendor.lineage.livedisplay@2.0-service.sat.rc
media/: media_codecs.xml  media_codecs_c2.xml
qcom/: Android.mk
qcom/mm-osal/: Android.mk  Makefile.am
qcom/mm-osal/src/: MMSignal.c  MMThread.c  Makefile.am
rootdir/: Android.mk
sepolicy_base/: file_contexts
thermal2/: Thermal.cpp  android.hardware.thermal@2.0-service.pixel.rc
touch/: Android.bp  vendor.lineage.touch@1.0-service.sdm660.rc
wifi/: WCNSS_qcom_cfg.ini
(+33 files in other folders)
