# Makefile.am - Automake script for mm-osal

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src
AM_CFLAGS = \
    -Wundef \
    -Werror \
    -Wall \
    -Wno-unused-variable \
    -Wno-unused-but-set-variable \
    -Wno-unused-label \
    -Wno-unused-function \
    -Wno-implicit-function-declaration \
    -Wno-strict-aliasing \
    -fno-short-enums

